log
Tue 18 Apr 2023 04:03:23 AM UTC: 
 tests:  0|5
total_score: 0/70
fe68dd6
Sat 22 Apr 2023 04:59:10 PM UTC: 
 sudoku.c | 23 +++++++++++++++++------
 1 file changed, 17 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:53:25: error: statement with no effect [-Werror=unused-value]
   53 |           n->sudo[i][j] == aux;
      |           ~~~~~~~~~~~~~~^~~~~~
sudoku.c:56:20: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   56 |           pushBack(lista, nuevoNodo);
      |                    ^~~~~
      |                    list
sudoku.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9c58301
Sat 22 Apr 2023 04:59:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:20: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   56 |           pushBack(lista, nuevoNodo);
      |                    ^~~~~
      |                    list
sudoku.c:56:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5cd47d7
Sat 22 Apr 2023 04:59:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
39bbf1a
Sat 22 Apr 2023 04:59:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
15ff41d
Sat 22 Apr 2023 05:01:45 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:48:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   48 |     int aux = 1;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
eb827d7
Sat 22 Apr 2023 05:01:52 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
8a357db
Sat 22 Apr 2023 05:09:08 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:18: error: invalid initializer
   63 |   int fila[10] = 0;
      |                  ^
sudoku.c:64:21: error: invalid initializer
   64 |   int columna[10] = 0;
      |                     ^
sudoku.c:65:20: error: invalid initializer
   65 |   int matriz[10] = 0;
      |                    ^
sudoku.c:65:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   65 |   int matriz[10] = 0;
      |       ^~~~~~
sudoku.c:64:7: error: unused variable ‘columna’ [-Werror=unused-variable]
   64 |   int columna[10] = 0;
      |       ^~~~~~~
sudoku.c:63:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   63 |   int fila[10] = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
4a43608
Sat 22 Apr 2023 05:18:56 PM UTC: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:18: error: invalid initializer
   63 |   int fila[10] = 0;
      |                  ^
sudoku.c:64:21: error: invalid initializer
   64 |   int columna[10] = 0;
      |                     ^
sudoku.c:65:20: error: invalid initializer
   65 |   int matriz[10] = 0;
      |                    ^
sudoku.c:78:37: error: statement with no effect [-Werror=unused-value]
   78 |         else columna[n->sudo[i][k]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:78:41: error: expected ‘;’ before ‘}’ token
   78 |         else columna[n->sudo[i][k]] == 1
      |                                         ^
      |                                         ;
   79 |       }
      |       ~                                  
sudoku.c:83:34: error: statement with no effect [-Werror=unused-value]
   83 |         else fila[n->sudo[k][i]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:83:38: error: expected ‘;’ before ‘}’ token
   83 |         else fila[n->sudo[k][i]] == 1
      |                                      ^
      |                                      ;
   84 |       }
      |       ~                               
sudoku.c:91:48: error: statement with no effect [-Werror=unused-value]
   91 |         else matriz[n->sudo[matrizI][matrizJ]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:91:52: error: expected ‘;’ before ‘}’ token
   91 |         else matriz[n->sudo[matrizI][matrizJ]] == 1
      |                                                    ^
      |                                                    ;
   92 |       }
      |       ~                                             
cc1: all warnings being treated as errors
Compilation failed
e7a0a3f
Sat 22 Apr 2023 05:19:18 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:37: error: statement with no effect [-Werror=unused-value]
   78 |         else columna[n->sudo[i][k]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:78:41: error: expected ‘;’ before ‘}’ token
   78 |         else columna[n->sudo[i][k]] == 1
      |                                         ^
      |                                         ;
   79 |       }
      |       ~                                  
sudoku.c:83:34: error: statement with no effect [-Werror=unused-value]
   83 |         else fila[n->sudo[k][i]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:83:38: error: expected ‘;’ before ‘}’ token
   83 |         else fila[n->sudo[k][i]] == 1
      |                                      ^
      |                                      ;
   84 |       }
      |       ~                               
sudoku.c:91:48: error: statement with no effect [-Werror=unused-value]
   91 |         else matriz[n->sudo[matrizI][matrizJ]] == 1
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:91:52: error: expected ‘;’ before ‘}’ token
   91 |         else matriz[n->sudo[matrizI][matrizJ]] == 1
      |                                                    ^
      |                                                    ;
   92 |       }
      |       ~                                             
cc1: all warnings being treated as errors
Compilation failed
f66ca18
Sat 22 Apr 2023 05:19:28 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:40: error: expected ‘;’ before ‘}’ token
   78 |         else columna[n->sudo[i][k]] = 1
      |                                        ^
      |                                        ;
   79 |       }
      |       ~                                 
sudoku.c:83:37: error: expected ‘;’ before ‘}’ token
   83 |         else fila[n->sudo[k][i]] = 1
      |                                     ^
      |                                     ;
   84 |       }
      |       ~                              
sudoku.c:91:51: error: expected ‘;’ before ‘}’ token
   91 |         else matriz[n->sudo[matrizI][matrizJ]] = 1
      |                                                   ^
      |                                                   ;
   92 |       }
      |       ~                                            
Compilation failed
5086832
